# tech-jobs-market-ai

./: README.md  docker-compose.yml  main.py  pyproject.toml
ingestion/: adzuna_ingestion.py  utils.py
ingestion/data-cleaning/: descriptive.ipynb
ingestion/data-extraction/: extract-test.ipynb  filtered_jobs_v2.csv  utils.py
